open profile linkedin

--- a/.gitignore
+++ b/.gitignore
@@ -1006,3 +1006,304 @@ src/linkedin/selenium/AutofillStates/2020.11.2.164946/EC
 *.pyc
 *.pkl
 src/linkedin/information.py
+src/linkedin/profile.py
+src/linkedin/selenium/CertificateRevocation/6829/crl-set
+src/linkedin/selenium/CertificateRevocation/6829/LICENSE
+src/linkedin/selenium/Default/Cache/018521b8e8eb8c8b_0
+src/linkedin/selenium/Default/Cache/025948f3cbc4ec7a_0
+src/linkedin/selenium/Default/Cache/02a2491bf124ada3_0
+src/linkedin/selenium/Default/Cache/03496e43f863c954_0
+src/linkedin/selenium/Default/Cache/03739d1fcac8c80c_0
+src/linkedin/selenium/Default/Cache/045fd67160f69c55_0
+src/linkedin/selenium/Default/Cache/06075b2d2bd95b62_0
+src/linkedin/selenium/Default/Cache/06ba6c19761e1de3_0
+src/linkedin/selenium/Default/Cache/07dc14a6be9e662f_0
+src/linkedin/selenium/Default/Cache/0abf6cc51e90ce45_0
+src/linkedin/selenium/Default/Cache/0b24d078f62538d2_0
+src/linkedin/selenium/Default/Cache/0bc641ef998aa796_0
+src/linkedin/selenium/Default/Cache/0dcab9a93202b840_0
+src/linkedin/selenium/Default/Cache/0f3aecd282c7b617_0
+src/linkedin/selenium/Default/Cache/0fcdd531bc768319_0
+src/linkedin/selenium/Default/Cache/0fed9d0f304e4749_0
+src/linkedin/selenium/Default/Cache/10b1335e3fd4e569_0
+src/linkedin/selenium/Default/Cache/10cc6910214adeca_0
+src/linkedin/selenium/Default/Cache/12a3a9c3398b8719_0
+src/linkedin/selenium/Default/Cache/137585046922d026_0
+src/linkedin/selenium/Default/Cache/13912f44bdf3fb56_0
+src/linkedin/selenium/Default/Cache/13adff07d8a53d4c_0
+src/linkedin/selenium/Default/Cache/13f5a99218bc834e_0
+src/linkedin/selenium/Default/Cache/143205f5fe4f8624_0
+src/linkedin/selenium/Default/Cache/14991e11fe9a93d3_0
+src/linkedin/selenium/Default/Cache/1893b2f42e2f525f_0
+src/linkedin/selenium/Default/Cache/1b76e52ff964bcab_0
+src/linkedin/selenium/Default/Cache/1ba93b654627e39c_0
+src/linkedin/selenium/Default/Cache/1c684f70899ae39f_0
+src/linkedin/selenium/Default/Cache/1cbbdb8efe8d063e_0
+src/linkedin/selenium/Default/Cache/1dfa5babcb811413_0
+src/linkedin/selenium/Default/Cache/1e6be92752da6226_0
+src/linkedin/selenium/Default/Cache/1f1e98c8ded0e36b_0
+src/linkedin/selenium/Default/Cache/1fd1f755ca3c6129_0
+src/linkedin/selenium/Default/Cache/1fff5201bd79dc31_0
+src/linkedin/selenium/Default/Cache/213e26569b0e7d83_0
+src/linkedin/selenium/Default/Cache/23436157c9b7b7bf_0
+src/linkedin/selenium/Default/Cache/23c5110152f431ec_0
+src/linkedin/selenium/Default/Cache/24608779a21d20a7_0
+src/linkedin/selenium/Default/Cache/24a30dbeb2657236_0
+src/linkedin/selenium/Default/Cache/258fd47acbf242e5_0
+src/linkedin/selenium/Default/Cache/26df2c39850f6baf_0
+src/linkedin/selenium/Default/Cache/2732920930a81b1b_0
+src/linkedin/selenium/Default/Cache/28044d19699ee389_0
+src/linkedin/selenium/Default/Cache/281af500fa3916d8_0
+src/linkedin/selenium/Default/Cache/289f456c0bff8a3c_0
+src/linkedin/selenium/Default/Cache/2975e9564cff181a_0
+src/linkedin/selenium/Default/Cache/29cd157279007f33_0
+src/linkedin/selenium/Default/Cache/2a56bcf73fd7c2b2_0
+src/linkedin/selenium/Default/Cache/2cac86e5eb4f5ed2_0
+src/linkedin/selenium/Default/Cache/2ee1bb740f3c8793_0
+src/linkedin/selenium/Default/Cache/2f6b646b801c4093_0
+src/linkedin/selenium/Default/Cache/2f8f2e7da9a53c22_0
+src/linkedin/selenium/Default/Cache/2fd962ce3a2cedb2_0
+src/linkedin/selenium/Default/Cache/312b9213aeb1a452_0
+src/linkedin/selenium/Default/Cache/3139145100e991fa_0
+src/linkedin/selenium/Default/Cache/3181f20a325f6cf2_0
+src/linkedin/selenium/Default/Cache/321ce4fb6c67d987_0
+src/linkedin/selenium/Default/Cache/33e7c1564a74fb0e_0
+src/linkedin/selenium/Default/Cache/350f7f66dcc19b19_0
+src/linkedin/selenium/Default/Cache/35ca00b0002a6d78_0
+src/linkedin/selenium/Default/Cache/36031034bf96b763_0
+src/linkedin/selenium/Default/Cache/360c307224f86f85_0
+src/linkedin/selenium/Default/Cache/372461d098b84306_0
+src/linkedin/selenium/Default/Cache/375a01483d6d2c28_0
+src/linkedin/selenium/Default/Cache/388263d07f74e44a_0
+src/linkedin/selenium/Default/Cache/38d5a67904e6ffd4_0
+src/linkedin/selenium/Default/Cache/39bca8ac76c28666_0
+src/linkedin/selenium/Default/Cache/39d0970bdca7825d_0
+src/linkedin/selenium/Default/Cache/3a773797f5d568ec_0
+src/linkedin/selenium/Default/Cache/3b7f70d9e0a18691_0
+src/linkedin/selenium/Default/Cache/3bd817c65327f598_0
+src/linkedin/selenium/Default/Cache/3f57fc630f546b7d_0
+src/linkedin/selenium/Default/Cache/3fe9b6ef352d0252_0
+src/linkedin/selenium/Default/Cache/3ff7d9942687d1b1_0
+src/linkedin/selenium/Default/Cache/401df95626bf57b2_0
+src/linkedin/selenium/Default/Cache/416b975babcaf447_0
+src/linkedin/selenium/Default/Cache/418afc019de65400_0
+src/linkedin/selenium/Default/Cache/41ab21941fb47888_0
+src/linkedin/selenium/Default/Cache/423f5524a975a929_0
+src/linkedin/selenium/Default/Cache/429392ee7911ea78_0
+src/linkedin/selenium/Default/Cache/4330d0bca49953a9_0
+src/linkedin/selenium/Default/Cache/446de302a444f8c5_0
+src/linkedin/selenium/Default/Cache/44eba80b9e3463c7_0
+src/linkedin/selenium/Default/Cache/4608b517311e170e_0
+src/linkedin/selenium/Default/Cache/46a15324f0faac4d_0
+src/linkedin/selenium/Default/Cache/4751f9960d3a2f40_0
+src/linkedin/selenium/Default/Cache/482b9aaddb8cb43a_0
+src/linkedin/selenium/Default/Cache/497ca9941c5ce30a_0
+src/linkedin/selenium/Default/Cache/4990bb0bfd9eca3a_0
+src/linkedin/selenium/Default/Cache/49b2595d011dda82_0
+src/linkedin/selenium/Default/Cache/49b2690741a3fb50_0
+src/linkedin/selenium/Default/Cache/4cee3ab3872a5ee9_0
+src/linkedin/selenium/Default/Cache/4f34d988441bc03f_0
+src/linkedin/selenium/Default/Cache/4fc4c8d79ef92f5e_0
+src/linkedin/selenium/Default/Cache/501a1534c571a6d7_0
+src/linkedin/selenium/Default/Cache/53aa2202fb42ead1_0
+src/linkedin/selenium/Default/Cache/555c36ec63a0559a_0
+src/linkedin/selenium/Default/Cache/55d3f8548cd25160_0
+src/linkedin/selenium/Default/Cache/563183156e65694f_0
+src/linkedin/selenium/Default/Cache/56643611efa370f6_0
+src/linkedin/selenium/Default/Cache/56b544187d5ce9e8_0
+src/linkedin/selenium/Default/Cache/5737e461d9f8db54_0
+src/linkedin/selenium/Default/Cache/586369ed0813daf6_0
+src/linkedin/selenium/Default/Cache/595c2dc88e416783_0
+src/linkedin/selenium/Default/Cache/59815b3c71e277c2_0
+src/linkedin/selenium/Default/Cache/59e39f783edd88b3_0
+src/linkedin/selenium/Default/Cache/5bb80e1b2d1626e4_0
+src/linkedin/selenium/Default/Cache/5f3a0be19deab6c0_0
+src/linkedin/selenium/Default/Cache/61681a0f7e2cc0b6_0
+src/linkedin/selenium/Default/Cache/6278bfe81fad5b82_0
+src/linkedin/selenium/Default/Cache/633358cbf7156512_0
+src/linkedin/selenium/Default/Cache/6341ca0bcdd11d6f_0
+src/linkedin/selenium/Default/Cache/6458ffffe35afddc_0
+src/linkedin/selenium/Default/Cache/64db7c55e67ef8dc_0
+src/linkedin/selenium/Default/Cache/6701fab5f55406c1_0
+src/linkedin/selenium/Default/Cache/681bc2b23781fc17_0
+src/linkedin/selenium/Default/Cache/6896f205a5a025fd_0
+src/linkedin/selenium/Default/Cache/698ccb7bdf8525dd_0
+src/linkedin/selenium/Default/Cache/69f651934352ba24_0
+src/linkedin/selenium/Default/Cache/6a75f29db3c6ea55_0
+src/linkedin/selenium/Default/Cache/6b3f05b44160a147_0
+src/linkedin/selenium/Default/Cache/6ca8805d1d666b14_0
+src/linkedin/selenium/Default/Cache/6e6b1b4cd55c33de_0
+src/linkedin/selenium/Default/Cache/708edca3685bc444_0
+src/linkedin/selenium/Default/Cache/70af1522c893cd9f_0
+src/linkedin/selenium/Default/Cache/70b5506411f744eb_0
+src/linkedin/selenium/Default/Cache/70e01b3d7fe670c7_0
+src/linkedin/selenium/Default/Cache/72e275fbe897408a_0
+src/linkedin/selenium/Default/Cache/737e0f2cf98ecace_0
+src/linkedin/selenium/Default/Cache/739e07eb6119c68c_0
+src/linkedin/selenium/Default/Cache/750c627c46bcc8a3_0
+src/linkedin/selenium/Default/Cache/7904be3e18f121a0_0
+src/linkedin/selenium/Default/Cache/79ba3b7453f3f59f_0
+src/linkedin/selenium/Default/Cache/7a5a0fa14ae18b26_0
+src/linkedin/selenium/Default/Cache/7a8210ec4ba9f264_0
+src/linkedin/selenium/Default/Cache/7d4277b115eebdda_0
+src/linkedin/selenium/Default/Cache/7d9f856e7f55fd1d_0
+src/linkedin/selenium/Default/Cache/80088da8af61cd46_0
+src/linkedin/selenium/Default/Cache/80f0e1d755efac9d_0
+src/linkedin/selenium/Default/Cache/85dc999050a88981_0
+src/linkedin/selenium/Default/Cache/862d7096c255b53e_0
+src/linkedin/selenium/Default/Cache/86336f7928a9a0a2_0
+src/linkedin/selenium/Default/Cache/8726e44968978f40_0
+src/linkedin/selenium/Default/Cache/872c78f8f3ff5ad8_0
+src/linkedin/selenium/Default/Cache/875ba19a0f346418_0
+src/linkedin/selenium/Default/Cache/8770299278b3bc89_0
+src/linkedin/selenium/Default/Cache/87e86f09c3ebceb9_0
+src/linkedin/selenium/Default/Cache/88bcbd17b6237ec9_0
+src/linkedin/selenium/Default/Cache/88f545b7225b352c_0
+src/linkedin/selenium/Default/Cache/8afd7d3a946f8931_0
+src/linkedin/selenium/Default/Cache/8b2ba2e887cd65e0_0
+src/linkedin/selenium/Default/Cache/8e66665d3c2d5f52_0
+src/linkedin/selenium/Default/Cache/8e81ba31e6e6c063_0
+src/linkedin/selenium/Default/Cache/8f13d09cd547033d_0
+src/linkedin/selenium/Default/Cache/910204f724468b67_0
+src/linkedin/selenium/Default/Cache/9238e53b74df4b6f_0
+src/linkedin/selenium/Default/Cache/9254ca5d0b54890c_0
+src/linkedin/selenium/Default/Cache/95194e296107d86c_0
+src/linkedin/selenium/Default/Cache/952dd4c735e02b58_0
+src/linkedin/selenium/Default/Cache/95ea1f0c0ff2ab7b_0
+src/linkedin/selenium/Default/Cache/967b2ded1b78682d_0
+src/linkedin/selenium/Default/Cache/96b7a615e5230f0b_0
+src/linkedin/selenium/Default/Cache/987959d18ad7b0ae_0
+src/linkedin/selenium/Default/Cache/99f1df591193f2be_0
+src/linkedin/selenium/Default/Cache/9a196433edc414a3_0
+src/linkedin/selenium/Default/Cache/9fe08a6f8013987e_0
+src/linkedin/selenium/Default/Cache/a0412058d7a35b5b_0
+src/linkedin/selenium/Default/Cache/a11bcfb225f63d7b_0
+src/linkedin/selenium/Default/Cache/a1527124c2dbe487_0
+src/linkedin/selenium/Default/Cache/a1a2b8b321b95a72_0
+src/linkedin/selenium/Default/Cache/a33498660452dc02_0
+src/linkedin/selenium/Default/Cache/a34c87b8fb71ce1b_0
+src/linkedin/selenium/Default/Cache/a3e9cd3eeba53092_0
+src/linkedin/selenium/Default/Cache/a3f871bdb19b4b62_0
+src/linkedin/selenium/Default/Cache/a487f61a82a613ea_0
+src/linkedin/selenium/Default/Cache/a59e0117e7383393_0
+src/linkedin/selenium/Default/Cache/a6ee68e73d2f6b4b_0
+src/linkedin/selenium/Default/Cache/a7678dfaf694e260_0
+src/linkedin/selenium/Default/Cache/a768e7fde8e17e35_0
+src/linkedin/selenium/Default/Cache/a82e2cbfce5fa246_0
+src/linkedin/selenium/Default/Cache/aaaa4afa0cc548b6_0
+src/linkedin/selenium/Default/Cache/aab1afea55b0ede9_0
+src/linkedin/selenium/Default/Cache/ad0040b4c9b22ac1_0
+src/linkedin/selenium/Default/Cache/af08e1ddf7855552_0
+src/linkedin/selenium/Default/Cache/afc9d9fdc1d93375_0
+src/linkedin/selenium/Default/Cache/b196e85aea32f275_0
+src/linkedin/selenium/Default/Cache/b45d14c3b409f6a6_0
+src/linkedin/selenium/Default/Cache/b5636c5c1410cb6b_0
+src/linkedin/selenium/Default/Cache/b91e84f70d6a2f41_0
+src/linkedin/selenium/Default/Cache/b96276b2142f75ee_0
+src/linkedin/selenium/Default/Cache/b987ce5c735cbcd8_0
+src/linkedin/selenium/Default/Cache/b992a301b37a29c3_0
+src/linkedin/selenium/Default/Cache/ba8d0cbeedf2326a_0
+src/linkedin/selenium/Default/Cache/bb2cc66e898c7c65_0
+src/linkedin/selenium/Default/Cache/be84f4780c38073c_0
+src/linkedin/selenium/Default/Cache/bf53c9c76ac2110b_0
+src/linkedin/selenium/Default/Cache/c16c82ced17c1c79_0
+src/linkedin/selenium/Default/Cache/c195d07071956ea6_0
+src/linkedin/selenium/Default/Cache/c26166dfd31388b3_0
+src/linkedin/selenium/Default/Cache/c30f46d5e6be5e59_0
+src/linkedin/selenium/Default/Cache/c3fac7e4b56e23cc_0
+src/linkedin/selenium/Default/Cache/c4a9006a00244c6d_0
+src/linkedin/selenium/Default/Cache/c70d008980328ab6_0
+src/linkedin/selenium/Default/Cache/c7df48b749b35083_0
+src/linkedin/selenium/Default/Cache/c839bbbf6df02af4_0
+src/linkedin/selenium/Default/Cache/c9dfd82b0445cee5_0
+src/linkedin/selenium/Default/Cache/ca7ce76597c6073e_0
+src/linkedin/selenium/Default/Cache/ccfba9e9d7423480_0
+src/linkedin/selenium/Default/Cache/cd996b4913868322_0
+src/linkedin/selenium/Default/Cache/cda7dd1592227b4f_0
+src/linkedin/selenium/Default/Cache/ce6671aec5c7e272_0
+src/linkedin/selenium/Default/Cache/ce99e047f67a34e4_0
+src/linkedin/selenium/Default/Cache/cee6b2ea9a602c6b_0
+src/linkedin/selenium/Default/Cache/cf4cc9723a351f39_0
+src/linkedin/selenium/Default/Cache/cfe10e69febe328c_0
+src/linkedin/selenium/Default/Cache/d0641869d79f97df_0
+src/linkedin/selenium/Default/Cache/d111fcd9f3077e1b_0
+src/linkedin/selenium/Default/Cache/d1badcc3b0ca1ffc_0
+src/linkedin/selenium/Default/Cache/d21e3684b47131dc_0
+src/linkedin/selenium/Default/Cache/d26edce2240b63ec_0
+src/linkedin/selenium/Default/Cache/d41eaabb2345d466_0
+src/linkedin/selenium/Default/Cache/d421f12f013777d1_0
+src/linkedin/selenium/Default/Cache/d7aa6f1b5868f80d_0
+src/linkedin/selenium/Default/Cache/d875a2696a5b83ce_0
+src/linkedin/selenium/Default/Cache/d8e554232b22701b_0
+src/linkedin/selenium/Default/Cache/da88fe1466f7248a_0
+src/linkedin/selenium/Default/Cache/dbe0baf9cf398c4b_0
+src/linkedin/selenium/Default/Cache/dd6f1ed9ac6961b3_0
+src/linkedin/selenium/Default/Cache/dd8dcb2b7b74659d_0
+src/linkedin/selenium/Default/Cache/dd9d7b03b7e0d542_0
+src/linkedin/selenium/Default/Cache/ddd8e37aeded6579_0
+src/linkedin/selenium/Default/Cache/dde87f281458a963_0
+src/linkedin/selenium/Default/Cache/dfd8ca0e85cb5d45_0
+src/linkedin/selenium/Default/Cache/e07d7eb79c6ca663_0
+src/linkedin/selenium/Default/Cache/e08138387a1fd84a_0
+src/linkedin/selenium/Default/Cache/e295df25423a6383_0
+src/linkedin/selenium/Default/Cache/e30ecf799c93acf3_0
+src/linkedin/selenium/Default/Cache/e41a97c043219c90_0
+src/linkedin/selenium/Default/Cache/e4650de91c9ae021_0
+src/linkedin/selenium/Default/Cache/e5e77ba5a99345f3_0
+src/linkedin/selenium/Default/Cache/e63d778885bdde5d_0
+src/linkedin/selenium/Default/Cache/e67ffdb21e5bce2e_0
+src/linkedin/selenium/Default/Cache/e852c3bc840063d0_0
+src/linkedin/selenium/Default/Cache/e98f867221402b42_0
+src/linkedin/selenium/Default/Cache/ed2525a1198843e8_0
+src/linkedin/selenium/Default/Cache/edf0b8937f80f8e7_0
+src/linkedin/selenium/Default/Cache/ee47f347072afac7_0
+src/linkedin/selenium/Default/Cache/eefde5ccdd045cd5_0
+src/linkedin/selenium/Default/Cache/ef32f29b9f895f3d_0
+src/linkedin/selenium/Default/Cache/efcf46644c3d44df_0
+src/linkedin/selenium/Default/Cache/f14d4451b4b37ea6_0
+src/linkedin/selenium/Default/Cache/f341947f2515de6a_0
+src/linkedin/selenium/Default/Cache/f38533b4293590c4_0
+src/linkedin/selenium/Default/Cache/f7de973ffbcb69a6_0
+src/linkedin/selenium/Default/Cache/f8056d53176037ad_0
+src/linkedin/selenium/Default/Cache/f8f1e83d750b126c_0
+src/linkedin/selenium/Default/Cache/f993f3e79ceb43e6_0
+src/linkedin/selenium/Default/Cache/fac7b4559b057ce4_0
+src/linkedin/selenium/Default/Cache/fbb93ed41244f834_0
+src/linkedin/selenium/Default/Cache/fc29f4ae6512028c_0
+src/linkedin/selenium/Default/Cache/fc84fdc440b15e19_0
+src/linkedin/selenium/Default/Cache/fe013336bf772d94_0
+src/linkedin/selenium/Default/Cache/ff0c8c1265dd1159_0
+src/linkedin/selenium/Default/Code Cache/js/0f9923572e3a913e_0
+src/linkedin/selenium/Default/Code Cache/js/25999a76bd78b1db_0
+src/linkedin/selenium/Default/Code Cache/js/2d57469c3c638af9_0
+src/linkedin/selenium/Default/Code Cache/js/373da69e358ef475_0
+src/linkedin/selenium/Default/Code Cache/js/4421f681f04c9efb_0
+src/linkedin/selenium/Default/Code Cache/js/4863928ae56f16c3_0
+src/linkedin/selenium/Default/Code Cache/js/4c02ed4021903a46_0
+src/linkedin/selenium/Default/Code Cache/js/5d85cf33d63f3951_0
+src/linkedin/selenium/Default/Code Cache/js/5dbba83d1c2b345a_0
+src/linkedin/selenium/Default/Code Cache/js/827e4b111aaeecea_0
+src/linkedin/selenium/Default/Code Cache/js/871bd6fea1b653dc_0
+src/linkedin/selenium/Default/Code Cache/js/8861821efd228b83_0
+src/linkedin/selenium/Default/Code Cache/js/8dc21c503ddc3d98_0
+src/linkedin/selenium/Default/Code Cache/js/9d2f530a05789f5f_0
+src/linkedin/selenium/Default/Code Cache/js/a4784c52d3c28876_0
+src/linkedin/selenium/Default/Code Cache/js/aaed66dc19309291_0
+src/linkedin/selenium/Default/Code Cache/js/b9f60bde814465ea_0
+src/linkedin/selenium/Default/Code Cache/js/c566bfacc21fbb7d_0
+src/linkedin/selenium/Default/Code Cache/js/c65fe2562d17e81b_0
+src/linkedin/selenium/Default/Code Cache/js/d9e63e5d2936bde4_0
+src/linkedin/selenium/Default/Code Cache/js/e0b326aadc1b86db_0
+src/linkedin/selenium/Default/Code Cache/js/e45f7f4f204e8e27_0
+src/linkedin/selenium/Default/Code Cache/js/e9ab34501ac5f477_0
+src/linkedin/selenium/Default/Code Cache/js/f6b1c2aa24120d25_0
+src/linkedin/selenium/Default/data_reduction_proxy_leveldb/MANIFEST-000032
+src/linkedin/selenium/Default/Sessions/Session_13275047912701119
+src/linkedin/selenium/Default/Sessions/Session_13275048245259101
+src/linkedin/selenium/Default/Sessions/Tabs_13275047913637934
+src/linkedin/selenium/Default/Sessions/Tabs_13275048246280814
+src/linkedin/selenium/RunningChromeVersion
+src/linkedin/selenium/SingletonCookie
+src/linkedin/selenium/SingletonLock
+src/linkedin/selenium/SingletonSocket
+src/__pycache__/BaseParser.cpython-39.pyc
